Fixing scrollbar height | changing community-stat button ui | fixing width of stat-card for large screens

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -79,6 +79,7 @@
   /* scrllbar stylesfor webkit based browsers */
   ::-webkit-scrollbar {
     width: 6px;
+    height: 6px;
   }
   ::-webkit-scrollbar-track {
     background: transparent;
